solved the 1px gap! uhg!
git-svn-id: https://repos.nextthought.com/svn/nti-svn/NextThoughtWebApp/trunk@9702 3dfb626b-079f-4ab1-a9f6-4654e5377508

--- a/src/main/resources/scss/_navigation-menu.scss
+++ b/src/main/resources/scss/_navigation-menu.scss
@@ -12,6 +12,10 @@
 		background: #f9f9f9 !important;
 		border: 0px solid #99c14f;
 		border-right-width: 3px !important;
+
+		.x-menu-item-cmp {
+			margin-bottom: 0 !important;
+		}
 	}
 }
 
